# MattsSDKBoostingTools

./: .gitignore  AGENTS.md  BUG_FIX_PLAN.md  BUILDER_OBSERVED_PART_OPTIONS_REPORT.md  DISCORD_BUG_REPORTS.md  LICENSE  MATT_EDITOR_CROSS_BUILDER_COMPARISON.md  MATT_EDITOR_EMBEDDED_TEST_REPORT.md  PARITY_AUDIT_REPORT.md  QA_TEST_PLAN.md  README.md  SDK03_MIGRATION_AUDIT.md  THIRD_PARTY_NOTICES.md  VERSIONING.md  build_electron_beta.ps1  build_external_exe.ps1  package_external_beta.ps1  publish_github_release.ps1
mod_extracted/MattsSDKBoostingTools/: MattsSDKBoostingTools_lootlemon_codes.json  __init__.py  backend_actions.py  bank_button_patch_audit.json  blimgui_panel.py  c4sh_trainer_prestidigitator_patch_audit.json  classmod_max_passives_patch_audit.json  dev_tools.py  external_app_launcher.py  external_bridge.py  external_bridge_patch_audit.json  external_bridge_v11_clean_audit.json  external_bridge_v2_patch_audit.json  external_bridge_v3_design_copy_audit.json  external_bridge_v5_bundled_resources_audit.json  external_bridge_v6_player_targets_audit.json  external_command_audit_v15.json  external_v4_resource_dropdowns_audit.json  golden_chest_keybinds.py  gzo_parts_map.json  inventory_capacity.py  item_pool_spawning.py  item_pools.json  legit_builder_core.py  legit_builder_deep_scan_audit.json  map_travel_curated_audit.json  map_travel_scan_audit.json  movement_adjustments.py  parts_update_audit.json  party_helpers.py  player_economy.py  pyproject.toml  serial_converter.py  serial_rewards.py  shinies.py  shiny_serials.json  spreadsheet_parts_compare_audit.json  (+2 more)
(+54 files in other folders)
